Updated Favicon code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 		<link rel='stylesheet' href='css/main.css'>
 
-		
-		<link rel="icon" href="favicon.png">
+
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 		<link rel="apple-touch-icon" sizes="128x128" href="apple-touch-icon-precomposed.png"> 
+
 		
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
